--- a/page-markup.html
+++ b/page-markup.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <h2>[Шапка страницы]</h2>
-    <div class="flex-container">
-        <div class="left-part">
+    <div class="flex-container"> <!--контейнер. содержит главную часть всей страницы и разбивается на 2 части:левую и правую-->
+        <div class="left-part"> <!--левая часть контейнера-->
             <h2>[Основная часть]</h2>
-            <div class="somecontainer">
-                <div class="top">
+            <div class="somecontainer"> <!--контейнер для 2 рядов блоков-->
+                <div class="top"> <!--1 ряд блока. содержит 2 равных блочка-->
                     <div class="boxie">[ЕЩЁ 1]</div>
                     <div class="boxie">[ЕЩЁ 2]</div>
                 </div>
-                <div class="bottomboxie">[ЕЩЁ 3]</div>
+                <div class="bottomboxie">[ЕЩЁ 3]</div> <!--2 ряд блока. размером с 2 блочка-->
             </div>
         </div>
-        <div class="right-part">
+        <div class="right-part"> <!--правая часть контейнера-->
             <h2>[Боковая область]</h2>
         </div>
     </div>
-    <footer>
-        <nav>
+    <footer> <!--нижняя часть страницы "блоком-меню"-->
+        <nav> 
             <ul>
                 <li>[Секция футера 1]</li>
                 <li>[Секция футера 2]</li>
