--- a/magic-gallery/gallery.html
+++ b/magic-gallery/gallery.html
@@ -37,7 +37,10 @@
     <h2 id="potions">Наши волшебные зелья</h2>
     <div class="potions">
         <img class="photo" src="assets/potion1.jpg" alt="">
-        <img class="photo" src="assets/potion2.jpg" alt="">
+        <div class="image-container">
+            <img class="photo" id="click" src="assets/potion2.jpg" alt="">
+            <div class="message">Это зелье очень опасно! <br> Здесь его фото предоставлено для наглядности.</div>
+        </div>
         <img class="photo" src="assets/potion3.jpg" alt="">
     </div>
 </body>
