descriptions alt added

--- a/magic-gallery/gallery.html
+++ b/magic-gallery/gallery.html
@@ -14,34 +14,34 @@
 
     <nav>
         <ul>
-            <li><img class="item" src="assets/magic-wand.png" alt=""><a href="#wands">Палочки</a></li>
-            <li><img  class="item" src="assets/magic-book.png" alt=""><a href="#books">Книги</a></li>
-            <li><img class="item" src="assets/potion.png" alt=""><a href="#potions">Зелья</a></li>
+            <li><img class="item" src="assets/magic-wand.png" alt="wand"><a href="#wands">Палочки</a></li>
+            <li><img  class="item" src="assets/magic-book.png" alt="book"><a href="#books">Книги</a></li>
+            <li><img class="item" src="assets/potion.png" alt="potion"><a href="#potions">Зелья</a></li>
         </ul>
     </nav>
 
     <h2 id="wands">Наши волшебные палочки</h2>
     <div class="wands">
-        <img class="photo" src="assets/wand1.jpg" alt="">
-        <img class="photo" src="assets/wand2.jpg" alt="">
-        <img class="photo" src="assets/wand3.jpg" alt="">
+        <img class="photo" src="assets/wand1.jpg" alt="wand">
+        <img class="photo" src="assets/wand2.jpg" alt="wand">
+        <img class="photo" src="assets/wand3.jpg" alt="wand">
     </div>
 
     <h2 id="books">Наши волшебные книги</h2>
     <div class="books">
-        <img class="photo" src="assets/book1.jpg" alt="">
-        <img class="photo" src="assets/book2.jpg" alt="">
-        <img class="photo" src="assets/book3.jpg" alt="">
+        <img class="photo" src="assets/book1.jpg" alt="book">
+        <img class="photo" src="assets/book2.jpg" alt="book">
+        <img class="photo" src="assets/book3.jpg" alt="book">
     </div>
 
     <h2 id="potions">Наши волшебные зелья</h2>
     <div class="potions">
-        <img class="photo" src="assets/potion1.jpg" alt="">
+        <img class="photo" src="assets/potion1.jpg" alt="potion">
         <div class="image-container">
-            <img class="photo" id="click" src="assets/potion2.jpg" alt="">
+            <img class="photo" id="click" src="assets/potion2.jpg" alt="potion">
             <div class="message">Это зелье очень опасно! <br> Здесь его фото предоставлено для наглядности.</div>
         </div>
-        <img class="photo" src="assets/potion3.jpg" alt="">
+        <img class="photo" src="assets/potion3.jpg" alt="potion">
     </div>
 </body>
 </html>
